--- a/WebGameV1/appsettings.json
+++ b/WebGameV1/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DBContext": "Server=localhost;uid=sa;pwd=123;database=WebGameV1;TrustServerCertificate=True",
-    "ApplicationDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebGameV1;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DBContext": "Server=localhost;uid=sa;pwd=123;database=AnhParkShop;TrustServerCertificate=True",
+    "ApplicationDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AnhParkShop;Trusted_Connection=True;MultipleActiveResultSets=true",
     "RedisConnection": "localhost:6379"
   },
   "SmtpSettings": {
